change EntityManager on Session

--- a/hibernate-with-spring/pom.xml
+++ b/hibernate-with-spring/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hibernate-example</artifactId>
+    <artifactId>hibernate-with-spring</artifactId>
 
     <dependencies>
         <dependency>
