--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>ioc-example</module>
-        <module>hibernate-example</module>
+        <module>hibernate-with-spring</module>
+        <module>hibernate</module>
     </modules>
 
     <dependencies>
