--- a/hibernate-with-spring/src/main/resources/application.properties
+++ b/hibernate-with-spring/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 db.driverClassName=com.mysql.cj.jdbc.Driver
 db.username=root
 db.password=root
-db.url=jdbc:mysql://localhost:3306/myDb?createDatabaseIfNotExist=true
+db.url=jdbc:mysql://localhost:3306/myDb?serverTimezone=UTC
