--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.6.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
     <groupId>org.example</groupId>
     <artifactId>spring-examples</artifactId>
     <packaging>pom</packaging>
@@ -12,6 +19,10 @@
         <module>ioc-example</module>
         <module>hibernate-with-spring</module>
         <module>hibernate</module>
+        <module>spring-boot-example</module>
+        <module>spring-data-example</module>
+        <module>common</module>
+        <module>spring-rest</module>
     </modules>
 
     <dependencies>
