--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,14 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>ioc-example</module>
         <module>hibernate-with-spring</module>
         <module>hibernate</module>
         <module>spring-boot-example</module>
         <module>spring-data-example</module>
         <module>common</module>
         <module>spring-rest</module>
+        <module>spring-boot-exampl</module>
+        <module>spring-data</module>
     </modules>
 
     <dependencies>
@@ -36,6 +37,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>5.2.4.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot</artifactId>
+            <version>2.2.6.RELEASE</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
