--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,11 @@
     <modules>
         <module>hibernate-with-spring</module>
         <module>hibernate</module>
-        <module>spring-boot-example</module>
-        <module>spring-data-example</module>
         <module>common</module>
         <module>spring-rest</module>
         <module>spring-boot-exampl</module>
         <module>spring-data</module>
+        <module>spring-rest-ext</module>
     </modules>
 
     <dependencies>
@@ -42,6 +41,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot</artifactId>
             <version>2.2.6.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>2.0.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>2.0.2</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
