--- a/spring-security/src/main/resources/application.properties
+++ b/spring-security/src/main/resources/application.properties
@@ -3,9 +3,5 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.hibernate.ddl-auto=update
 server.port=8081
-
-server.servlet.context-path=/app
-spring.flyway.baselineOnMigrate = true
